# account-recovery-assistant

./: .dockerignore  CHANGELOG.md  DISCLAIMER.md  Dockerfile  FEEDBACK.md  LICENSE  MANIFEST.in  PRE_PUBLICATION_CHECKLIST.md  PRIVACY.md  PUBLIC_ALPHA_CHECKLIST.md  README.md  SECURITY.md  THREAT_MODEL.md  architecture.md  demo.md  pyproject.toml  roadmap.md  setup.py  use-cases.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  outdated_link.yml  recovery_scenario_request.yml  safety_concern.yml
.github/workflows/: ci.yml  link-check.yml  release-candidate.yml
data/: recovery_playbooks.json  service_priorities.json
deploy/: docker-compose.yml  nginx.conf
docs/: alpha-tester-issue.md  current-usage.md  demo-script.md  deployment.md  hosted-operations.md  interview-script.md  knowledge-base-operations.md  landing-pages.md  monitoring.md  production-privacy-template.md  public-alpha-status.md  release-candidate-v0.1.0-rc.1.md  release-notes-v0.1.0.md  releasing.md  service-priorities.md
docs/superpowers/plans/: 2026-06-19-cli-mvp.md  2026-06-19-web-wizard.md
examples/: apple_wait_period.json  changed_phone.json  google_identity_review.json  lost_mfa.json  meta_business_takeover.json  meta_identity_review.json  microsoft_backup_admin.json  microsoft_consumer_recovery.json  microsoft_domain_support.json  suspicious_lock.json
schemas/: recovery_playbooks.schema.json  service_priorities.schema.json
scripts/: check_links.py  make_demo_gif.py  sync_packaged_data.py  validate_data.py
src/account_recovery_assistant/: __init__.py  __main__.py  planner.py  playbooks.py  questionnaire.py  report.py  validation.py  web.py
tests/: test_browser_smoke.py  test_cli.py  test_data_validation.py  test_packaging.py  test_planner.py  test_playbooks.py  test_service_priorities.py  test_web.py
tests/fixtures/: abuse_corpus.json
(+7 files in other folders)
