[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "account-recovery-assistant"
version = "0.1.0"
description = "Safety-first account recovery guidance through official channels."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
account_recovery_assistant = ["static/*.css", "static/*.js"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
