[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "account-recovery-assistant"
version = "0.1.0"
description = "Safety-first account recovery guidance through official channels."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["account-recovery", "security", "privacy", "mfa", "2fa", "password-recovery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/bortoq/account-recovery-assistant"
Repository = "https://github.com/bortoq/account-recovery-assistant"
Issues = "https://github.com/bortoq/account-recovery-assistant/issues"

[project.scripts]
account-recovery-assistant = "account_recovery_assistant.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
account_recovery_assistant = ["static/*.css", "static/*.js"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
